JS - ES6 | New Keywords and Parameter Handling

--- a/Javascript/ES6/01_New_Keywords/01_let/package.json
+++ b/Javascript/ES6/01_New_Keywords/01_let/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "01_let",
+  "name": "letkeyword",
   "version": "1.0.0",
   "description": "",
   "main": "src.js",
   "scripts": {
-    "babel": "babel --presets es2015 src.js -o build/main.bundle.js",
-    "start": "npm run webpack",
-    "webpack": "webpack -d --watch"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^3.6.0"
   }
 }
