--- a/React/Projects/01_Todo_App/todoapp/package.json
+++ b/React/Projects/01_Todo_App/todoapp/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "todo-app",
+  "name": "todoapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
